# python-graphql-relay-todos

./: .env.example  .gitignore  Caddyfile  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: lint-server.yml  lint.yml  test-server.yml  test.yml
app/: __init__.py  config.py  schema.py
app/notes/: models.py  mutation.py  query.py  services.py
client/: .dockerignore  .env.example  .swcrc  Dockerfile  index.html  jest.config.ts  package-lock.json  package.json  relay.config.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/__tests__/: App.test.tsx  app.spec.ts  app.spec.tsx
client/config/jest/: fileTransform.ts
client/coverage/: clover.xml  coverage-final.json  lcov.info
client/coverage/lcov-report/: index.html
client/coverage/lcov-report/src/: index.html  main.tsx.html  router.tsx.html
client/coverage/lcov-report/src/components/: LoadingScreen.tsx.html  icons.tsx.html  index.html
client/coverage/lcov-report/src/components/home-page/: Todo.tsx.html  TodoController.tsx.html  TodoList.tsx.html  index.html
client/coverage/lcov-report/src/components/home-page/__generated__/: TodoControllerCreateMutation.graphql.ts.html  TodoControllerFragment.graphql.ts.html  TodoDeleteMutation.graphql.ts.html  TodoFragment.graphql.ts.html  TodoListFragment.graphql.ts.html  TodoListPaginationQuery.graphql.ts.html  TodoListQuery.graphql.ts.html  TodoToggleCompleteMutation.graphql.ts.html  index.html
client/coverage/lcov-report/src/components/ui/: button.tsx.html  card.tsx.html  form.tsx.html  index.html  input.tsx.html  label.tsx.html  scroll-area.tsx.html  skeleton.tsx.html  textarea.tsx.html
client/coverage/lcov-report/src/layouts/: HomePageLayout.tsx.html  index.html
client/coverage/lcov-report/src/lib/: index.html  intl.ts.html  relay-environment.ts.html  utils.ts.html
client/coverage/lcov-report/src/pages/: HomePage.tsx.html  index.html
client/coverage/lcov-report/src/pages/__generated__/: HomePageQuery.graphql.ts.html  index.html
client/src/: App.tsx  index.css  main.tsx  router.tsx
client/src/components/: ErrorScreen.tsx  LoadingScreen.tsx  icons.tsx  loader.tsx  todo-controller.tsx  todo-list-skeleton.tsx  todo-list.tsx  todo.tsx
client/src/components/home-page/: HomePage.tsx  Todo.tsx  TodoController.tsx  TodoList.tsx  home-page.tsx  todo-controller.tsx  todo-list-skeleton.tsx  todo-list.tsx  todo.tsx
client/src/components/home-page/__generated__/: HomePageQuery.graphql.ts  TodoControllerCreateMutation.graphql.ts  TodoControllerFragment.graphql.ts  TodoDeleteMutation.graphql.ts  TodoFragment.graphql.ts  TodoListFragment.graphql.ts  TodoListPaginationQuery.graphql.ts  TodoListQuery.graphql.ts  TodoToggleCompleteMutation.graphql.ts
client/src/layouts/: HomePageLayout.tsx
client/src/lib/: apolloClient.ts  intl.ts  relay-environment.ts
client/src/pages/: HomePage.tsx
client/src/pages/__generated__/: HomePageQuery.graphql.ts
migrations/: env.py
schema/: schema.graphql
server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
server/app/: __init__.py  config.py  container.py  context.py  dataloaders.py  graphql_app.py  logger.py  scalars.py  schema.py
server/app/base/: query.py  types.py
server/app/database/: dependencies.py  paginator.py  session.py
server/app/lib/: constants.py
server/app/notes/: dataloaders.py  mutation.py  query.py  repositories.py  services.py  types.py
server/app/todos/: dataloaders.py  exceptions.py  models.py  mutation.py  query.py  repositories.py  services.py  types.py
server/migrations/: env.py
server/migrations/versions/: 1d39b1c92f55_initial_migration.py  71526df857a5_create_extensions.py  821ce9f3d275_add_todo_completed.py  b34a5c46adf0_initial_migration.py
server/tests/: conftest.py  factories.py
server/tests/integration/: client.py  conftest.py
server/tests/integration/todos/: test_mutation.py  test_query.py
server/tests/plugins/: database.py  repositories.py  services.py
server/tests/unit/database/: test_paginator.py
server/tests/unit/todos/: test_repositories.py  test_services.py
